syntax = "proto3";

package message_bus;

import "google/protobuf/any.proto";
import "message_bus/message_event_type.proto";

option java_multiple_files = true;
option java_outer_classname = "MessageEventProtos";
option java_package = "com.volmyr.message_bus";

message MessageEvent {
  string id = 1;
  int64 created_timestamp = 3;
  MessageEventType type = 5;
  oneof data {
    string string_data = 20;
    google.protobuf.Any any_data = 50;
  }
}
